Use gulp-html module and update README.md.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "laravel-elixir-blade-minifier",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "Minify blade templates with Laravel Elixir.",
     "main": "index.js",
     "author": "Ice Cream Waffle <sxlllslgh@gmail.com>",
     "license": "MIT",
     "dependencies": {
         "laravel-elixir": "^6.0.0-10",
-        "html-minifier": "^3.0.2"
+        "gulp-htmlmin": "^2.0.0"
     },
     "repository": {
         "type": "git",
